--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,5 @@
 browser=chrome
+#browser=chrome-headless
 leadiqExtenURL=https://account.leadiq.com/extension/leadiq-app.html#/init
 chromeExtensionURL=chrome://extensions/
 extensionName=LeadIQ Prospector
@@ -6,4 +7,6 @@ extensionVersion=6.2.0
 username=yakupckahveci@googlemail.com
 password=Trabzon-66
 implicitlyWait=5
+linkedlnUsername=johndoe.theadvancedtester@gmail.com
+linkedlnPassword=johnDoeTheAdvancedTester101
 
